oratorio/static/styles.css
@import url('https://fonts.googleapis.com/css?family=Roboto|Roboto+Condensed');

body {
  --background-color: #F6F6F6;
  background-color: var(--background-color);
  --foreground-color: #cbcbcb;
  --hover-color: rgba(100, 100, 100, 0.7);
  --sidebar-bg-color: rgb(140, 139, 137);
  --sidebar-fg-color: rgb(192, 191, 189);
  --sidebar-title-height: 45pt;
  margin: 0;
  overflow: hidden;
  font-family: roboto;
}

ul {
    list-style-type: none;
    margin: 0;
    padding: 0;
    overflow: hidden;
    background-color: #3B3738;
}

li {
    float: left;
}

li a {
    display: block;
    color: white;
    text-align: center;
    padding: 14px 16px;
    text-decoration: none;
}

li a:hover {
    background-color: #111;
}

a[target="_blank"]:after {
    /*
    Add a link to the "external" icon. Example below using the Wikipedia one (blue).    
    content:url(http://upload.wikimedia.org/wikipedia/commons/6/64/Icon_External_Link.png); */
}

/*Sidebar*/
#Sidebar {
  --sidebar-width: 30%;
  background: var(--sidebar-bg-color);
  display: inline-block;
  position: absolute;
  left: 0px;
  top: 47px;
  width: var(--sidebar-width);
  border: 5px solid #8c8b89;
  border-width: 0 5px 0 0;
  margin-left: calc(-30% - 5pt);
  transition: margin-left 0.5s;
  overflow-y: scroll;
  z-index: 100;
}

#Sidebar.open {
  margin-left: 0;
}

#SidebarTitle {
  width: 100%;
  height: var(--sidebar-title-height);
  color: var(--background-color);
  font-size: calc( var(--sidebar-title-height) / 2);
  padding: 5pt -5pt 5pt 5pt;
}

.menuItem {
  background: var(--sidebar-fg-color);
  margin: 0 0 5pt 0;
  font-size: 10pt;
  color: var(--background-color);
  font-style: italic;
  padding: 5pt;
}

.itemName {
  color: #419bf9;
  font-size: 16pt;
  font-style: normal;
  text-decoration: none;
}

.itemName span {
  font-weight: 900;
}

/*Sidebar navigation button*/
#MenuButton {
  width: 50px;
  height: 25px; 
  position: absolute;
  left: 0;
  top: 46px;
  display: inline-block;
  margin: 5pt 0 0 4pt;
  transform: rotate(0deg);
  transition: .5s ease-in-out, 0.5s left;
  cursor: pointer;
  z-index: 99;
}

#MenuButton span {
  display: block;
  position: absolute;
  height: 8pt;
  width: 100%;
  /*background: var(--foreground-color);*/
  border: var(--foreground-color) 2pt solid;
  border-radius: 4pt;
  opacity: 1;
  left: 0;
  transform: rotate(0deg);
  transition: .25s ease-in-out;
}

#MenuButton:hover span {
  background: var(--hover-color);
}

#MenuButton.open {
  left: 30%;
}

#MenuButton.open span {
  width: 75%;
}

#MenuButton.open span {
  background-color: #c43e33;
  border-width: 0;
}

#MenuButton span:nth-child(1) {
  top: 0px;
}

#MenuButton span:nth-child(2),#MenuButton span:nth-child(3) {
  top: 18px;
}

#MenuButton span:nth-child(4) {
  top: 36px;
}

#MenuButton.open span:nth-child(1) {
  top: 18px;
  width: 0%;
  left: 50%;
}

#MenuButton.open span:nth-child(2) {
  transform: rotate(45deg);
}

#MenuButton.open span:nth-child(3) {
  transform: rotate(-45deg);
}

#MenuButton.open span:nth-child(4) {
  top: 18px;
  width: 0%;
  left: 50%;
}

/*Results*/
.ResultsPanel {
  border-width: 5px;
  border-color: rgb(140, 139, 137);
  border-style: solid;
  border-radius: 10px;
  background-color: rgb(192, 191, 189);
}

/*Profile*/
#ProfilePanel {
  --profile-panel-width: 60%;
  --profile-title-height: 45pt;
  background-color: #c0bfbd;
  border-radius: 10px;
  border-width: 4px;
  border-color: rgb(140, 139, 137);
  border-style: solid;
  position: absolute;
  left: 20%;
  top: 10%;
  width: var(--profile-panel-width);
  height: 85%;
  overflow: hidden;
}

#ProfileTitle {
  position: relative;
  width: 100%;
  height: var(--profile-title-height);
  background-color: rgb(140, 139, 137);
  font-size: calc( var(--profile-title-height) / 2);
  border-radius: 5px 5px 0 0;
  font-family: "Roboto Condensed";
  color: var(--background-color);
  line-height: var(--profile-title-height);
}

#UserName {
  padding-left: 0.5em;
}

/*Buttons*/
#MainButton {
  border-color: rgb(153, 47, 35);
  border-style: solid;
  border-radius: 50%;
  background-color: #C63D0F;
  position: absolute;
  display: inline-block;
  top: 0;
  text-align: center;
  vertical-align: center;
  font-size: 10em;
  line-height: 3em;
  color: #F6F6F6;
  font-family: 'Roboto Condensed';
  cursor: pointer;
}
.SideButton {
  border-width: 10px;
  border-color: rgb(102, 101, 100);
  color: rgb(102, 101, 100);
  border-style: solid;
  border-radius: 50%;
  background-color: rgb(140, 139, 137);
  position: absolute;
  text-align: center;
  font-family: "roboto condensed";
  transition: opacity 1s, border-color 1s, color 1s, background-color 1s;
  cursor: pointer;
}
.SideRedButton {
  border-color: rgb(153, 47, 35);
  color: rgb(153, 47, 35);
  background-color: rgb(198, 61, 45);
}
.hide {
  opacity: 0;
  cursor: default;
}

.g-signin2 {

}

.SquareButton {
  border-width: 3pt;
  border-color: rgb(153, 47, 35);
  border-style: solid;
  border-radius: 10px;
  background-color: rgb(198, 61, 45);
  padding: 5pt 20pt 5pt 20pt;
  font-size: 18pt;
  cursor: pointer;
  color: rgb(153, 47, 35);
  position: absolute;
  top: calc(90% + 18px);
  left: 10px;
}
.LoginButton {
  float: right;
  top: 0;
  color: var(--foreground-color);
  padding: 5pt;
  margin: 5pt;
  cursor: pointer;
}
.LogoutButton {
  display: none;
  float: right;
  top: 0;
  color: #F6F6F6;
  background-color: #3B3738;
  border-style: solid;
  padding: 5pt;
  margin: 5pt;
  font-size: 16pt;
  cursor: pointer;
  transition: 0.5s;
}
.button {
  float: right;
  top: 0;
  color: var(--foreground-color);
  border-color: var(--foreground-color);
  border-width: 2pt;
  border-radius: 5pt;
  border-style: solid;
  padding: 5pt;
  margin: 5pt;
  font-size: 18pt;
  cursor: pointer;
  transition: 0.5s;
}
.button:hover {
  background-color: var(--hover-color);
}

#transcript {
  clear: both;
  display: inline-block;
  color: var(--foreground-color);
  font-size: 16pt;
  width: calc(100% - 300pt);
  top: var(--sidebar-title-height);
  position: absolute;
  height: calc(100% - var(--sidebar-title-height) * 2);
  overflow-y: scroll;
}

#transcript span {
  color: orange;
  font-weight: bold;
}

#statsContainer {
  display: inline-block;
  position: absolute;
  right: 0;
  background: var(--sidebar-fg-color);
  width: 280pt;
  top: calc(var(--sidebar-title-height) - 10pt);
  height: calc(100% - var(--sidebar-title-height) - 20pt);
  border-radius: 10pt;
  border: 3pt solid var(--sidebar-bg-color);
  margin: 10pt;
  padding-top: 10pt;
}

#stats {
  padding: 0 1em 0 1em;
  font-family: "Roboto";
  color: var(--background-color);
  overflow-y: scroll;
}

#stats h2 {
  font-size: 14pt;
  font-weight: normal;
  clear: both;
}

#stats h2 span {
  font-size: 18pt;
  font-weight: bold;
}

#stats .tones > div {
  float: left;
  width: 48%;
  margin: 1%;
}

.slider {
  width: 100%;
  height: 12pt;
  --red-to-green: linear-gradient(90deg, #e75d36, #e0c418, #34bd8e);
  background: var(--red-to-green);
  border-radius: 12pt;
}
.slider > div {
  height: 6pt;
  width: 6pt;
  border: 3pt solid var(--background-color);
  border-radius: 50%;
}

.pace {
  background: linear-gradient(90deg, #e75d36, #e0c418, #34bd8e, #e0c418, #e75d36)
}


#stats .words a {
  text-decoration: none;
  color: var(--background-color);
  display: block;
  font-size: 18pt;
  padding: 5pt;
}

#userdocumentation {
  clear: both;
  display: inline-block;
  color: var(--foreground-color);
  font-size: 16pt;
  top: var(--sidebar-title-height);
  position: absolute;
  height: calc(100% - var(--sidebar-title-height) * 2);
  overflow-y: scroll;
}

#recordAnother {
  display: inline-block;
  position: absolute;
  bottom: 0;
  left: 0;
  margin: 5pt;
  background-color: rgb(153, 47, 35);
  padding: 5pt;
  color: var(--foreground-color);
  border-color: var(--foreground-color);
  border-radius: 5pt;
  border-style: solid;
  border-width: 2pt;
  font-size: 18pt;
  cursor:pointer;
  text-decoration: none;
}

